# homod

./: Makefile  example-translations.md  fm-gen.maude  fm27-meta.maude  fm27-omod.maude  fm27-parsing.maude  fm27-start.maude  fm27.maude  haskell-orig.hs  homod.hs  homod.maude  homod.md  lambda-abstraction.maude  maude-gen.maude  old.maude  readme  smod.md  tangle  testing.maude  typed-combinators.maude  univ.md
adts/: adts.hs  adts.md  tangle
homod/: homod.hs  homod.maude  homod.md  homod2.md
state-space/: check-sat.maude  cycle.maude  meta-strategy.maude  meta-strategy.md  nondet-scheduler.maude  strategy.maude  tangle  thermostat.maude
univ/: Mauke.hs  sort_ops.md  univ-maude.cabal  univ.maude  univ.md
univ/app/: Main.hs
univ/src/Language/Maude/: Types.hs
univ/src/Language/Maude/Parser/: Inner.hs  Outer.hs
univ/test/: Spec.hs
