name:                univ-maude
version:             0.1.0.0
--- synopsis:
--- description:
--- homepage:
license:             GPL3
license-file:        LICENSE
author:              Everett Hildenbrandt
maintainer:          hildenb2@illinois.edu
copyright:           2017 Everett Hildenbrandt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Maude.Types
                     , Language.Maude.Parser.Outer
                     , Language.Maude.Parser.Inner
  build-depends:       base >= 4.7 && < 5
                     , gll > 0.4
                     , regex-applicative > 0.3
                     , TypeCompose > 0.9.0
  default-language:    Haskell2010

executable univ-maude-exe
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , univ-maude
                     , gll > 0.4
                     , regex-applicative > 0.3
                     , TypeCompose > 0.9.0
  default-language:    Haskell2010

test-suite univ-maude-test
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , univ-maude
                     , gll > 0.4
                     , regex-applicative > 0.3
                     , TypeCompose > 0.9.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ehildenb/univ-maude
